# signal

./: .gitignore  pyproject.toml
src/signal/: signal.py
src/signals/: signals.py
test/: test_broadcast.py
