[project]
name = "signal"
version = "0.1.0"
description = "A library to allow dispatch and receive event between different async task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "signal"